--- a/eam/common/generator/src/main/resources/templates/ext.js.vm
+++ b/eam/common/generator/src/main/resources/templates/ext.js.vm
@@ -60,6 +60,19 @@ layui.define(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','x
         beforeSubmit:function (data) {
             console.log("beforeSubmit",data);
             return true;
+        },
+        #for(g:iframes)
+        #(g.iframeLoadJsFunctionName):function (ifr,win,data) {
+            // debugger
+            console.log("#(g.iframeLoadJsFunctionName)",ifr,data);
+            //设置 iframe 高度
+            ifr.height("400px");
+            //设置地址
+            win.location="/business/system/node/node_list.html?id="+data.id;
+        },
+        #end
+        other:function(){
+
         }
     }
     //
