--- a/eam/common/generator/src/main/resources/templates/list.html.vm
+++ b/eam/common/generator/src/main/resources/templates/list.html.vm
@@ -14,15 +14,22 @@
     <link rel="stylesheet" href="/assets/css/foxnic-web.css" th:href="'/assets/css/foxnic-web.css?'+${cacheKey}">
     <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
     <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>
+    <style>
+        #if(marginDisabled)
+        .layui-card-body .layui-table {
+            margin:0px;
+        }
+        #end
+    </style>
 </head>
 
 <body style="overflow-y: hidden">
 
-<div class="layui-card">
+<div class="#if(!marginDisabled)layui-card#else layui-card-no-shadow #end">
  
-    <div class="layui-card-body">
+    <div class="layui-card-body" style="#if(marginDisabled)padding:0px#end">
 
-        <div class="search-bar">
+        <div class="search-bar" style="#if(searchDisabled) display: none; #end">
 
             <div class="search-input-rows" style="opacity: 0">
                 #for(searchFields : searchRows)
@@ -102,7 +109,7 @@
             </div>
         </div>
 
-        <div style="margin-top: #(searchRowsDisplay * 42)px">
+        <div style="margin-top: #if(searchDisabled)0px #else #(searchRowsDisplay * 42)px #end">
             <table class="layui-table" id="data-table" lay-filter="data-table"></table>
         </div>
 
