--- a/eam/common/generator/src/main/resources/templates/ext.js.vm
+++ b/eam/common/generator/src/main/resources/templates/ext.js.vm
@@ -1,3 +1,5 @@
+#(authorAndTime)
+
 layui.config({
     dir: layuiPath,
     base: '/module/'
@@ -6,9 +8,9 @@ layui.config({
     foxnicUpload: 'upload/foxnic-upload'
 })
 //
-layui.define(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','xmSelect','laydate','foxnicUpload'],function () {
+layui.define(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','xmSelect','laydate','foxnicUpload','dropdown'],function () {
 
-    var admin = layui.admin,settings = layui.settings,form = layui.form,upload = layui.upload,laydate= layui.laydate;
+    var admin = layui.admin,settings = layui.settings,form = layui.form,upload = layui.upload,laydate= layui.laydate,dropdown=layui.dropdown;
     table = layui.table,layer = layui.layer,util = layui.util,fox = layui.foxnic,xmSelect = layui.xmSelect,foxup=layui.foxnicUpload;
 
     //列表页的扩展
@@ -18,6 +20,39 @@ layui.define(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','x
          * */
         beforeQuery:function (conditions) {
             console.log('beforeQuery',conditions);
+        },
+        /**
+         * 单行删除前调用，若返回false则不执行后续操作
+         * */
+        beforeSingleDelete:function (data) {
+            console.log('beforeSingleDelete',data);
+            return true;
+        },
+        /**
+         * 批量删除前调用，若返回false则不执行后续操作
+         * */
+        beforeBatchDelete:function (selected) {
+            console.log('beforeBatchDelete',selected);
+            return true;
+        },
+        /**
+         * 表格右侧操作列更多按钮事件
+         * */
+        moreAction:function (menu,data, it){
+            console.log('moreAction',menu,data,it);
+        },
+        #for(b:toolButtons)
+        #(b.functionName):function (selected,it){
+            console.log('#(b.functionName)',selected,it);
+        },
+        #end
+        #for(b:opColumnButtons)
+        #(b.functionName):function (data){
+            console.log('#(b.functionName)',data);
+        },
+        #end
+        other:function(){
+
         }
     }
 
@@ -34,6 +69,46 @@ layui.define(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','x
          * */
         afterDataFill:function (data) {
             console.log('afterDataFill',data);
+        },
+        /**
+         * 数据提交前，如果返回 false，停止后续步骤的执行
+         * */
+        beforeSubmit:function (data) {
+            console.log("beforeSubmit",data);
+            return true;
+        },
+        #for(g:iframes)
+        /**
+         *  加载 #(g.title)
+         */
+        #(g.iframeLoadJsFunctionName):function (ifr,win,data) {
+            // debugger
+            console.log("#(g.iframeLoadJsFunctionName)",ifr,data);
+            //设置 iframe 高度
+            ifr.height("400px");
+            //设置地址
+            win.location="/business/system/node/node_list.html?id="+data.id;
+        },
+        #end
+        #for(t:tabs)
+        /**
+         *  加载 #(t.title)
+         */
+        #(t.iframeLoadJsFunctionName):function (ifr,win,data) {
+            // debugger
+            console.log("#(t.iframeLoadJsFunctionName)",ifr,data);
+            //设置 iframe 高度
+            ifr.parents(".layui-tab").height("460px");
+            ifr.height("400px");
+            //设置参数
+            admin.putTempData("code_example_id",data.id,true);
+            //设置地址
+            win.location="/business/system/code_example_car/code_example_car_list.html";
+        },
+        #end
+
+        other:function(){
+
         }
     }
     //
