--- a/eam/common/generator/src/main/resources/templates/form.html.vm
+++ b/eam/common/generator/src/main/resources/templates/form.html.vm
@@ -36,7 +36,7 @@
 </head>
 
 <body style="overflow-y: hidden">
-<div class="form-container">
+<div class="form-container" >
 
     <form id="data-form" lay-filter="data-form" class="layui-form model-form" style="display:none">
         #for(f : hiddenFields)
@@ -45,6 +45,41 @@
 
 
         #for(g : groups) <!--开始：group 循环-->
+
+        #if(g.type.equals("iframe"))
+        #if(g.title!=null)
+        <fieldset class="layui-elem-field layui-field-title form-group-title">
+        <legend>#(g.title)</legend>
+        </fieldset>
+        #end
+        <div class="layui-row form-row" style="text-align: center;">
+            <div style="display: inline-block;padding-right: 8px;padding-left: 8px" class="layui-col-xs12">
+            <iframe js-fn="#(g.iframeLoadJsFunctionName)" class="form-iframe" frameborder="0" style="width: 100%"></iframe>
+            </div>
+        </div>
+        #else if(g.type.equals("tab"))
+
+        <div class="layui-row form-row" style="text-align: center;background-color: white;">
+            <div style="display: inline-block;margin-right: 8px;margin-left: 8px" class="layui-col-xs12">
+                <div class="layui-tab" style="padding-right: 8px;padding-left: 8px;height: 300px;">
+                    <ul class="layui-tab-title">
+                        #for(tab:g.tabs)
+                        <li  #if(tab.index==0) class="layui-this" #end>#(tab.title)</li>
+                        #end
+                    </ul>
+                    <div class="layui-tab-content">
+                        #for(tab:g.tabs)
+                        <div class="layui-tab-item #if(tab.index==0) layui-show #end">
+                            <iframe js-fn="#(tab.iframeLoadJsFunctionName)" class="form-iframe form-iframe-tab" frameborder="0" style="width: 100%"></iframe>
+                        </div>
+                        #end
+                    </div>
+                </div>
+            </div>
+            </div>
+
+
+        #else if(g.type.equals("normal"))
 
         #if(g.title!=null)
         <fieldset class="layui-elem-field layui-field-title form-group-title">
@@ -158,6 +193,7 @@
             </div>
             #end <!--结束：栏次输入框循环-->
         </div>
+        #end
         #end <!--结束：group循环-->
 
         <div style="height: 8px"></div>
