--- a/eam/common/generator/src/main/resources/templates/list.js.vm
+++ b/eam/common/generator/src/main/resources/templates/list.js.vm
@@ -18,7 +18,7 @@ function ListPage() {
 	this.init=function(layui) {
      	
      	admin = layui.admin,settings = layui.settings,form = layui.form,upload = layui.upload,laydate= layui.laydate;
-		table = layui.table,layer = layui.layer,util = layui.util,fox = layui.foxnic,xmSelect = layui.xmSelect;
+		table = layui.table,layer = layui.layer,util = layui.util,fox = layui.foxnic,xmSelect = layui.xmSelect,dropdown=layui.dropdown;;
 		
      	//渲染表格
      	renderTable();
@@ -55,11 +55,11 @@ function ListPage() {
 				ps = {searchField: "$composite", searchValue: JSON.stringify(contitions)};
 			}
 
-			var h=$(".search-bar").height();
+			var h=#if(searchDisabled)-28; #else $(".search-bar").height();#end
 			dataTable=fox.renderTable({
 				elem: '#data-table',
 				toolbar: '#toolbarTemplate',
-				defaultToolbar: ['filter', 'print'],
+				defaultToolbar: ['filter', 'print',{title: '刷新数据',layEvent: 'refresh-data',icon: 'layui-icon-refresh-3'}],
 				url: moduleURL +'/query-paged-list',
 				height: 'full-'+(h+28),
 				limit: 50,
@@ -433,20 +433,25 @@ function ListPage() {
 		//头工具栏事件
 		table.on('toolbar(data-table)', function(obj){
 			var checkStatus = table.checkStatus(obj.config.id);
+			var selected=#if(isSimplePK)getCheckedList("#(idPropertyName)");#else getCheckedList();#end
 			switch(obj.event){
 				case 'create':
 					openCreateFrom();
 					break;
 				#if(isSimplePK)
 				case 'batch-del':
-					batchDelete();
+					batchDelete(selected);
 					break;
 				#end
-				case 'other':
+				#for(b:toolButtons)
+				case 'tool-#(b.id)':
+					window.pageExt.list.#(b.functionName) && window.pageExt.list.#(b.functionName)(selected,obj);
 					break;
-					//自定义头工具栏右侧图标 - 提示
-				case 'LAYTABLE_TIPS':
-					layer.alert('这是工具栏右侧自定义的一个图标按钮');
+				#end
+				case 'refresh-data':
+					refreshTableData();
+					break;
+				case 'other':
 					break;
 			};
 		});
@@ -465,7 +470,7 @@ function ListPage() {
 		
 		#if(isSimplePK)
         //批量删除按钮点击事件
-        function batchDelete() {
+        function batchDelete(selected) {
           
 			var ids=getCheckedList("#(idPropertyName)");
             if(ids.length==0) {
@@ -475,6 +480,10 @@ function ListPage() {
             //调用批量删除接口
 			layer.confirm(fox.translate('确定删除已选中的')+fox.translate('#(topic)')+fox.translate('吗？'), function (i) {
 				layer.close(i);
+				if(window.pageExt.list.beforeBatchDelete) {
+					var doNext=window.pageExt.list.beforeBatchDelete(selected);
+					if(!doNext) return;
+				}
 				layer.load(2);
                 admin.request(moduleURL+"/delete-by-ids", { #(idsPropertyName): ids }, function (data) {
                     layer.closeAll('loading');
@@ -485,6 +494,7 @@ function ListPage() {
                         layer.msg(data.message, {icon: 2, time: 1500});
                     }
                 });
+
 			});
         }
         #end
@@ -530,6 +540,12 @@ function ListPage() {
 			
 				layer.confirm(fox.translate('确定删除此')+fox.translate('#(topic)')+fox.translate('吗？'), function (i) {
 					layer.close(i);
+
+					if(window.pageExt.list.beforeSingleDelete) {
+						var doNext=window.pageExt.list.beforeSingleDelete(data);
+						if(!doNext) return;
+					}
+
 					layer.load(2);
 					admin.request(moduleURL+"/delete", { #(paramJson) }, function (data) {
 						layer.closeAll('loading');
@@ -546,6 +562,21 @@ function ListPage() {
 			#for(b:opColumnButtons)
 			else if (layEvent === '#(b.id)') { // #(b.label)
 				window.pageExt.list.#(b.functionName)(data);
+			}
+			#end
+			#if(opColumnMenus!=null && opColumnMenus.size()>0)
+			else if(obj.event === 'ops-more'){
+				//更多下拉菜单
+				dropdown.render({
+					elem: this
+					,show: true //外部事件触发即显示
+					,data: #(opColumnMenuData)
+					,click: function(menu, othis){
+						window.pageExt.list.moreAction && window.pageExt.list.moreAction(menu,data, othis);
+					}
+					,align: 'right'
+					,style: 'box-shadow: 1px 1px 10px rgb(0 0 0 / 12%);'
+				});
 			}
 			#end
 			#if(isTree)else if (layEvent === 'drill') {
@@ -578,6 +609,7 @@ function ListPage() {
 			offset: [top,null],
 			area: ["#(formWindow.width)",height+"px"],
 			type: 2,
+			id:"#(formDataKey)-win",
 			content: '#(formURI)' + queryString,
 			finish: function () {
 				refreshTableData();
@@ -589,7 +621,7 @@ function ListPage() {
 };
 
 
-layui.use(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','xmSelect','laydate'],function() {
+layui.use(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','xmSelect','laydate','dropdown'],function() {
 	var task=setInterval(function (){
 		if(!window["pageExt"]) return;
 		clearInterval(task);
