--- a/eam/common/generator/src/main/resources/templates/list.html.vm
+++ b/eam/common/generator/src/main/resources/templates/list.html.vm
@@ -203,6 +203,12 @@
     #end
     #end
     var AUTH_PREFIX="#(authPrefix)";
+
+    #for(v:jsVariables)
+    // #(v.note)
+    var #(v.name) = #(v.value) ;
+    #end
+
 </script>
 
 <script th:src="'#(extURI)?'+${cacheKey}"></script>
