--- a/eam/common/generator/src/main/resources/templates/form.js.vm
+++ b/eam/common/generator/src/main/resources/templates/form.js.vm
@@ -42,6 +42,9 @@ function FormPage() {
 	 * */
 	var adjustPopupTask=-1;
 	function adjustPopup() {
+		#if(footerDisabled)
+		return;
+		#end
 		clearTimeout(adjustPopupTask);
 		var scroll=$(".form-container").attr("scroll");
 		if(scroll=='yes') return;
@@ -273,6 +276,59 @@ function FormPage() {
 
 	}
 
+	function getFormData() {
+		var data=form.val("data-form");
+
+		#for(f : fields)
+		#if(f.isFormElem)
+		#if(f.typeName.equals("logic_switch"))
+		//处理 #(f.labelInForm) 默认值
+		if(!data.#(f.varName)) data.#(f.varName)=0;
+		#end
+		#end
+		#end
+
+		#for(f : fields)
+		#if(f.isFormElem)
+		#if(f.typeName.equals("check_box"))
+		//处理 #(f.labelInForm) 默认值
+		data["#(f.varName)"]=fox.getCheckedValue("#(f.varName)");
+		#end
+		#end
+		#end
+
+		#for(f : fields)
+		#if(f.isFormElem)
+		#if(f.typeName.equals("select_box"))
+		//获取 #(f.labelInForm) 下拉框的值
+		data["#(f.varName)"]=fox.getSelectedValue("#(f.varName)",#(f.selectField.muliti));
+		#end
+		#end
+		#end
+
+		return data;
+	}
+
+	function verifyForm(data) {
+		return fox.formVerify("data-form",data,VALIDATE_CONFIG)
+	}
+
+	function saveForm(data) {
+		var api=moduleURL+"/"+(data.#(idPropertyName)?"update":"insert");
+		var task=setTimeout(function(){layer.load(2);},1000);
+		admin.request(api, data, function (data) {
+			clearTimeout(task);
+			layer.closeAll('loading');
+			if (data.success) {
+				layer.msg(data.message, {icon: 1, time: 500});
+				var index=admin.getTempData('#(formDataKey)-popup-index');
+				admin.finishPopupCenter(index);
+			} else {
+				layer.msg(data.message, {icon: 2, time: 1000});
+			}
+		}, "POST");
+	}
+
 	/**
       * 保存数据，表单提交事件
       */
@@ -280,57 +336,16 @@ function FormPage() {
 
 	    form.on('submit(submit-button)', function (data) {
 	    	//debugger;
-			data.field = form.val("data-form");
-
-	    	#for(f : fields)
-			#if(f.isFormElem)
-		    #if(f.typeName.equals("logic_switch"))
-			//处理 #(f.labelInForm) 默认值
-		    if(!data.field.#(f.varName)) data.field.#(f.varName)=0;
-		    #end
-			#end
-		    #end
-
-			#for(f : fields)
-			#if(f.isFormElem)
-			#if(f.typeName.equals("check_box"))
-			//处理 #(f.labelInForm) 默认值
-			data.field["#(f.varName)"]=fox.getCheckedValue("#(f.varName)");
-			#end
-			#end
-			#end
-
-			#for(f : fields)
-			#if(f.isFormElem)
-			#if(f.typeName.equals("select_box"))
-			//获取 #(f.labelInForm) 下拉框的值
-			data.field["#(f.varName)"]=fox.getSelectedValue("#(f.varName)",#(f.selectField.muliti));
-			#end
-			#end
-			#end
+			data.field = getFormData();
 
 			//校验表单
-			if(!fox.formVerify("data-form",data,VALIDATE_CONFIG)) return;
+			if(!verifyForm(data.field)) return;
 
 			if(window.pageExt.form.beforeSubmit) {
 				var doNext=window.pageExt.form.beforeSubmit(data.field);
 				if(!doNext) return ;
 			}
-
-	    	var api=moduleURL+"/"+(data.field.#(idPropertyName)?"update":"insert");
-	        var task=setTimeout(function(){layer.load(2);},1000);
-	        admin.request(api, data.field, function (data) {
-	            clearTimeout(task);
-			    layer.closeAll('loading');
-	            if (data.success) {
-	                layer.msg(data.message, {icon: 1, time: 500});
-					var index=admin.getTempData('#(formDataKey)-popup-index');
-	                admin.finishPopupCenter(index);
-	            } else {
-	                layer.msg(data.message, {icon: 2, time: 1000});
-	            }
-	        }, "POST");
-
+			saveForm(data.field);
 	        return false;
 	    });
 
@@ -338,6 +353,13 @@ function FormPage() {
 	    $("#cancel-button").click(function(){admin.closePopupCenter();});
 
     }
+
+    window.module={
+		getFormData: getFormData,
+		verifyForm: verifyForm,
+		saveForm: saveForm
+	};
+
 }
 
 layui.use(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','xmSelect','foxnicUpload','laydate'],function() {
