--- a/eam/common/generator/src/main/resources/templates/form.js.vm
+++ b/eam/common/generator/src/main/resources/templates/form.js.vm
@@ -22,6 +22,10 @@ function FormPage() {
 			disableModify=true;
 		}
 
+		if(window.pageExt.form.beforeInit) {
+			window.pageExt.form.beforeInit();
+		}
+
 		//渲染表单组件
 		renderFormFields();
 
@@ -235,13 +239,17 @@ function FormPage() {
 			#end
 			#end
 
-
-
+			//处理fillBy
+			#for(f : fields)
+			#if(f.formFillByPropertyNames!=null && f.formFillByPropertyNames.size()>0)
+			$("##(f.varName)").val(fox.getProperty(formData,#(f.formFillByPropertyNames)));
+			#end
+			#end
 
 	     	fm.attr('method', 'POST');
 	     	renderFormFields();
 
-		window.pageExt.form.afterDataFill && window.pageExt.form.afterDataFill(formData);
+			window.pageExt.form.afterDataFill && window.pageExt.form.afterDataFill(formData);
 
 		}
 
