--- a/eam/view/view-ops/src/main/resources/public/business/ops/host/host_list.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/host/host_list.html
@@ -2,7 +2,7 @@
 /**
  * 主机 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-08-29 12:16:20
+ * @since 2021-09-02 19:49:24
  */
  -->
  <!DOCTYPE html>
@@ -150,6 +150,7 @@
 
     <a th:if="${perm.checkAuth('ops_host:delete')}" class="layui-btn layui-btn-xs layui-btn-danger" lay-event="del" th:text="${lang.translate('删除')}">删除</a>
 
+    <a class="layui-btn layui-btn-xs " lay-event="open-host-voucher-window" th:text="${lang.translate('凭证')}">凭证</a>
 
 </script>
 
