--- a/eam/common/generator/src/main/resources/templates/ext.js.vm
+++ b/eam/common/generator/src/main/resources/templates/ext.js.vm
@@ -21,11 +21,26 @@ layui.define(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','x
         beforeInit:function () {
             console.log("list:beforeInit");
         },
+        afterSearchInputReady: function() {
+            console.log("list:afterSearchInputReady");
+        },
         /**
          * 查询前调用
          * */
-        beforeQuery:function (conditions) {
+        beforeQuery:function (conditions,location) {
             console.log('beforeQuery',conditions);
+        },
+        /**
+         * 查询结果渲染后调用
+         * */
+        afterQuery : function () {
+
+        },
+        /**
+         * 进一步转换 list 数据
+         * */
+        templet:function (field,value,r) {
+            return value;
         },
         /**
          * 在新建或编辑窗口打开前调用，若返回 false 则不继续执行后续操作
@@ -41,11 +56,22 @@ layui.define(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','x
             console.log('beforeSingleDelete',data);
             return true;
         },
+        afterSingleDelete:function (data){
+            console.log('beforeSingleDelete',data);
+            return true;
+        },
         /**
          * 批量删除前调用，若返回false则不执行后续操作
          * */
         beforeBatchDelete:function (selected) {
             console.log('beforeBatchDelete',selected);
+            return true;
+        },
+        /**
+         * 批量删除后调用，若返回false则不执行后续操作
+         * */
+        afterBatchDelete:function (data) {
+            console.log('afterBatchDelete',data);
             return true;
         },
         /**
@@ -78,7 +104,10 @@ layui.define(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','x
         },
         #end
         #end
-        other:function(){
+        /**
+         * 末尾执行
+         */
+        ending:function() {
 
         }
     }
@@ -142,8 +171,10 @@ layui.define(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','x
             win.location="/business/system/code_example_car/code_example_car_list.html";
         },
         #end
-
-        other:function(){
+        /**
+         * 末尾执行
+         */
+        ending:function() {
 
         }
     }
